option java_outer_classname = "LCVehiclePassTimes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";


message VehiclePassTimes {
	required int64	areaId	=1;
}