option java_outer_classname = "LCInOrOutAreaNotifySetPara";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.newstatisticsdata.entity";

message InOrOutAreaNotifySetPara{
	required	int64	areaIdentify  	=1;
	required	int32	status			=2;
}